--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="249" Width="619"
+        Title="MainWindow" Height="329" Width="619"
         xmlns:vc="clr-namespace:Rush.Converters">
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
@@ -26,6 +26,11 @@
                                     </Button.ToolTip>
                                 </Button>
                                 <Button Name="SelectAllSourceFoldersButton" Click="OnClearAllSourceFoldersButtonClick" Margin="5,0,0,0" ToolTip="Clear All Locations">Clear</Button>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                <Label>Destination</Label>
+                                <TextBox Name="DestinationTextBox" Margin="35,0,0,0" Width="339"></TextBox>
+                                <Button Name="DestinationBrowseButton" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0">Browse</Button>
                             </StackPanel>
                         </StackPanel>
 
