--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="329" Width="619"
+        Title="MainWindow" Height="329" Width="645"
         xmlns:vc="clr-namespace:Rush.Converters">
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
@@ -13,25 +13,47 @@
                 <TabItem Header="Select">
                     <Grid>
                         <StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <Label>Source Locations</Label>
-                                <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339"></ComboBox>
-                                <Button Name="AddSourceFolderButton" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
-                                <Button Content="Remove" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
-                                    <Button.ToolTip>
-                                        <MultiBinding Converter="{StaticResource ComboBoxAndButtonTooltipMultiValueConverter}">
-                                            <Binding ElementName="SourceLocationsComboBox" Path="SelectedIndex"></Binding>
-                                            <Binding ElementName="SourceLocationsComboBox" Path="SelectedItem"></Binding>
-                                        </MultiBinding>
-                                    </Button.ToolTip>
-                                </Button>
-                                <Button Name="SelectAllSourceFoldersButton" Click="OnClearAllSourceFoldersButtonClick" Margin="5,0,0,0" ToolTip="Clear All Locations">Clear</Button>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                                <Label>Destination</Label>
-                                <TextBox Name="DestinationTextBox" Margin="35,0,0,0" Width="339"></TextBox>
-                                <Button Name="DestinationBrowseButton" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0">Browse</Button>
-                            </StackPanel>
+                            <Expander Header="Locations">
+                                <StackPanel Margin="20,5,0,0">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label>Source Locations</Label>
+                                        <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339"></ComboBox>
+                                        <Button Name="AddSourceFolderButton" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
+                                        <Button Content="Remove" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
+                                            <Button.ToolTip>
+                                                <MultiBinding Converter="{StaticResource ComboBoxAndButtonTooltipMultiValueConverter}">
+                                                    <Binding ElementName="SourceLocationsComboBox" Path="SelectedIndex"></Binding>
+                                                    <Binding ElementName="SourceLocationsComboBox" Path="SelectedItem"></Binding>
+                                                </MultiBinding>
+                                            </Button.ToolTip>
+                                        </Button>
+                                        <Button Name="SelectAllSourceFoldersButton" Click="OnClearAllSourceFoldersButtonClick" Margin="5,0,0,0" ToolTip="Clear All Locations">Clear</Button>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                                        <Label>Destination</Label>
+                                        <TextBox Name="DestinationTextBox" Margin="35,0,0,0" Width="339"></TextBox>
+                                        <Button Name="DestinationBrowseButton" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0">Browse</Button>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Expander>
+                            
+                            <Expander Header="File Types" Margin="0,10,0,0">
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="20,5,0,0">
+                                        <CheckBox Content="mp3" IsChecked="True"></CheckBox>
+                                        <CheckBox Content="m4a" Margin="10,0,0,0"></CheckBox>
+                                        <CheckBox Content="aac" Margin="10,0,0,0"></CheckBox>
+                                        <CheckBox Content="falc" Margin="10,0,0,0"></CheckBox>
+                                        <CheckBox Content="ogg" Margin="10,0,0,0"></CheckBox>
+                                        <CheckBox Content="wma" Margin="10,0,0,0"></CheckBox>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Expander>
+                            <Expander Header="Order" Margin="0,10,0,0">
+                                <StackPanel Margin="20,5,0,0">
+                                    
+                                </StackPanel>
+                            </Expander>
                         </StackPanel>
 
                     </Grid>
