--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="321.557" Width="645" MaxWidth="645"
+        Title="MainWindow" Height="321.557" Width="646" 
         xmlns:vc="clr-namespace:Rush.Converters">
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
@@ -58,6 +58,11 @@
                     <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
                         <Button x:Name="OrganizeButton"  Margin="10,0,0,0" Height="29" Click="OnOrganizeButtonClick" Content="Organize"/>
                         <Button x:Name="ExitButton" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" >Exit</Button>
+                        <CheckBox FontWeight="Bold" Margin="170,5,0,0" Width="121" Height="19" IsChecked="True"> Overwrite Existing</CheckBox>
+                        <RadioButton Margin="10,5,10,0">Move</RadioButton>
+                        <RadioButton Margin="0,5,0,0" IsChecked="True">Copy</RadioButton>
+                        <Label FontWeight="Bold">: File Operation</Label>
+                        
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
