--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Rush.Windows.MainWindow"
+﻿<Controls:MetroWindow  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="321.557" Width="645" MaxWidth="645"
+        Title="Rush" Height="321.557" Width="645" MaxWidth="645"
         xmlns:vc="clr-namespace:Rush.Converters">
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
@@ -9,7 +10,7 @@
         <vc:IntToBoolConverter x:Key="IntToBoolConverter"></vc:IntToBoolConverter>
         <vc:BoolToColorConverter x:Key="BoolToColorConverter"></vc:BoolToColorConverter>
         <vc:StringToBoolConverter x:Key="StringToBoolConverter"></vc:StringToBoolConverter>
-        <vc:OrganizeButtonController x:Key="OrganizeButtonController"></vc:OrganizeButtonController>
+        <vc:OrganizeButtonConverter x:Key="OrganizeButtonConverter"></vc:OrganizeButtonConverter>
     </Window.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <Grid Margin="5,10,0,0">
@@ -19,8 +20,8 @@
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                         <Label>Source Locations</Label>
                         <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Tag="{Binding Items.Count, Converter={StaticResource IntToBoolConverter}, Mode=OneWay, RelativeSource={RelativeSource Self}}"></ComboBox>
-                        <Button Name="AddSourceFolderButton" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
-                        <Button Content="Remove" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
+                        <Button Name="AddSourceFolderButton" Style="{DynamicResource SquareButtonStyle}" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
+                        <Button Content="Remove" Style="{DynamicResource SquareButtonStyle}" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
                             <Button.ToolTip>
                                 <MultiBinding Converter="{StaticResource ComboBoxAndButtonTooltipMultiValueConverter}">
                                     <Binding ElementName="SourceLocationsComboBox" Path="SelectedIndex"></Binding>
@@ -28,17 +29,17 @@
                                 </MultiBinding>
                             </Button.ToolTip>
                         </Button>
-                        <Button Name="SelectAllSourceFoldersButton" IsEnabled="{Binding Items.Count, ElementName=SourceLocationsComboBox, Mode=OneWay, Converter={StaticResource IntToBoolConverter}}"  Click="OnClearAllSourceFoldersButtonClick" Margin="5,0,0,0" ToolTip="Clear All Locations">Clear</Button>
+                        <Button Name="SelectAllSourceFoldersButton" Style="{DynamicResource SquareButtonStyle}" IsEnabled="{Binding Items.Count, ElementName=SourceLocationsComboBox, Mode=OneWay, Converter={StaticResource IntToBoolConverter}}"  Click="OnClearAllSourceFoldersButtonClick" Margin="5,0,0,0" ToolTip="Clear All Locations">Clear</Button>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
                         <Label>Destination</Label>
-                        <TextBox Name="DestinationTextBox" Margin="35,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" ToolTip="The Destination Folder" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}"></TextBox>
-                        <Button Name="DestinationBrowseButton" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0" ToolTip="Select The Destination Location">Browse</Button>
+                        <TextBox Name="DestinationTextBox"  Margin="35,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" ToolTip="The Destination Folder" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}"></TextBox>
+                        <Button Name="DestinationBrowseButton" Style="{DynamicResource SquareButtonStyle}" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0" ToolTip="Select The Destination Location">Browse</Button>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel  Margin="10,5,0,0" >
                     <Label FontWeight="Bold">File Types</Label>
-                    <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
+                    <StackPanel Orientation="Horizontal" Margin="15,5,0,0">
                         <CheckBox Name="Mp3CheckBox" Content="mp3" IsEnabled="{Binding Tag, Converter={StaticResource IntToBoolConverter}, RelativeSource={RelativeSource Self}}"/>
                         <CheckBox Name="M4ACheckBox" Content="m4a" IsEnabled="{Binding Tag, Converter={StaticResource IntToBoolConverter}, RelativeSource={RelativeSource Self}}" Margin="10,0,0,0"></CheckBox>
                         <CheckBox Name="AacCheckBox" Content="aac" IsEnabled="{Binding Tag, Converter={StaticResource IntToBoolConverter}, RelativeSource={RelativeSource Self}}" Margin="10,0,0,0"></CheckBox>
@@ -50,7 +51,7 @@
                 <StackPanel Margin="10,5,0,0">
                     <Label FontWeight="Bold">File Order</Label>
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0" >
-                        <TextBox Name="OrderTextBox" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Margin="0,0,5,0" Width="533" TextChanged="OnOrderTextBoxTextChanged" ToolTip="Enter the Order of the files you want in this input box (click help button for more informations)" Tag=""></TextBox>
+                        <TextBox Name="OrderTextBox" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Margin="0,0,5,0" Width="533" TextChanged="OnOrderTextBoxTextChanged" ToolTip="Enter the Order of the files you want in this input box (click help button for more informations)" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}"/>
                         <Image Name="FileOrderHelpImage" Source="help.png" Height="26" Width="36" PreviewMouseDown="OnFileOrderHelpImagePreviewMouseDown" />
                     </StackPanel>
                     <StackPanel Margin="20,5,0,0" >
@@ -59,20 +60,20 @@
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
-                        <Button x:Name="OrganizeButton"  Margin="10,0,0,0" Height="29" Click="OnOrganizeButtonClick" Content="Organize" >
+                        <Button x:Name="OrganizeButton" Style="{DynamicResource SquareButtonStyle}"  Margin="10,0,0,0" Height="29" Click="OnOrganizeButtonClick" Content="Organize" >
                             <Button.IsEnabled>
-                                <MultiBinding Converter="{StaticResource OrganizeButtonController}">
+                                <MultiBinding Converter="{StaticResource OrganizeButtonConverter}">
                                     <Binding ElementName="SourceLocationsComboBox" Path="Tag"></Binding>
                                     <Binding ElementName="DestinationTextBox" Path="Tag"></Binding>
                                     <Binding ElementName="OrderTextBox" Path="Tag"></Binding>
                                 </MultiBinding>
                             </Button.IsEnabled>
                         </Button>
-                        <Button x:Name="ExitButton" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" IsCancel="True" >Exit</Button>
+                        <Button x:Name="ExitButton" Style="{DynamicResource SquareButtonStyle}" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" IsCancel="True" >Exit</Button>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
         </Grid>
     </ScrollViewer>
    
-</Window>
+</Controls:MetroWindow>
