--- a/Rush/Windows/FileOrderHelpWindow.xaml
+++ b/Rush/Windows/FileOrderHelpWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Rush.Windows.FileOrderHelpWindow"
+﻿<Controls:MetroWindow xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        x:Class="Rush.Windows.FileOrderHelpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="How to setup file order" MaxHeight="222" MaxWidth="586" Height="222" Width="586">
@@ -11,7 +12,7 @@
 &lt;year&gt; tag represents the year of the media file&#10;
 &lt;genre&gt; tag represents the genre of the media media file
 the order text can only have these 5 tags" HorizontalAlignment="Left" Height="106" Margin="10,34,0,0" VerticalAlignment="Top" Width="558"/>
-        <Button x:Name="CloseButton" Content="Close" HorizontalAlignment="Left" Margin="483,147,0,0" VerticalAlignment="Top" Width="75" ToolTip="Close Help Window" Click="OnCloseButtonClick"/>
+        <Button x:Name="CloseButton" Style="{DynamicResource SquareButtonStyle}" Content="Close" HorizontalAlignment="Left" Margin="483,147,0,0" VerticalAlignment="Top" Width="75" ToolTip="Close Help Window" Click="OnCloseButtonClick"/>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
