--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -2,8 +2,8 @@
         x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Rush" Height="321.557" Width="645" MaxWidth="645"
-        xmlns:vc="clr-namespace:Rush.Converters">
+        Title="Rush" Height="317.557" Width="645" MaxWidth="645"
+        xmlns:vc="clr-namespace:Rush.Converters" Icon="/Rush;component/Images/logo.PNG">
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
         <vc:ComboBoxAndButtonTooltipMultiValueConverter x:Key="ComboBoxAndButtonTooltipMultiValueConverter"></vc:ComboBoxAndButtonTooltipMultiValueConverter>
@@ -19,7 +19,9 @@
                     <Label FontWeight="Bold" >Locations</Label>
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                         <Label>Source Locations</Label>
-                        <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Tag="{Binding Items.Count, Converter={StaticResource IntToBoolConverter}, Mode=OneWay, RelativeSource={RelativeSource Self}}"></ComboBox>
+                        <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Tag="{Binding Items.Count, Converter={StaticResource IntToBoolConverter}, Mode=OneWay, RelativeSource={RelativeSource Self}}">
+                            <ComboBoxItem Content="Music" ToolTip="E:\Music"/>
+                        </ComboBox>
                         <Button Name="AddSourceFolderButton" Style="{DynamicResource SquareButtonStyle}" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
                         <Button Content="Remove" Style="{DynamicResource SquareButtonStyle}" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
                             <Button.ToolTip>
@@ -33,7 +35,7 @@
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
                         <Label>Destination</Label>
-                        <TextBox Name="DestinationTextBox"  Margin="35,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" ToolTip="The Destination Folder" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}"></TextBox>
+                        <TextBox Name="DestinationTextBox" Controls:TextBoxHelper.Watermark="Destination Folder"  Margin="35,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" ToolTip="The Destination Folder" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}" IsReadOnly="True"></TextBox>
                         <Button Name="DestinationBrowseButton" Style="{DynamicResource SquareButtonStyle}" Click="OnDestinationBrowseButtonClick" Margin="5,0,0,0" ToolTip="Select The Destination Location">Browse</Button>
                     </StackPanel>
                 </StackPanel>
@@ -52,11 +54,16 @@
                     <Label FontWeight="Bold">File Order</Label>
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0" >
                         <TextBox Name="OrderTextBox" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Margin="0,0,5,0" Width="533" TextChanged="OnOrderTextBoxTextChanged" ToolTip="Enter the Order of the files you want in this input box (click help button for more informations)" Tag="{Binding Text, Converter={StaticResource StringToBoolConverter}, RelativeSource={RelativeSource Self}}"/>
-                        <Image Name="FileOrderHelpImage" Source="help.png" Height="26" Width="36" PreviewMouseDown="OnFileOrderHelpImagePreviewMouseDown" />
+                        <Image Name="FileOrderHelpImage" Source="/Rush;component/Images/help.png" Height="26" Width="36" PreviewMouseDown="OnFileOrderHelpImagePreviewMouseDown" />
                     </StackPanel>
                     <StackPanel Margin="20,5,0,0" >
                         <Label Name="OrderValidationLabel" Foreground="Tomato" FontSize="11"></Label>
                     </StackPanel>
+                </StackPanel>
+                <StackPanel Visibility="Collapsed" x:Name="progressStack" Margin="20,5,10,0">
+                    <Label Name="TitleLabel" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34"></Label>
+                    <Label Name="MessageLabel" Height="35"></Label>
+                    <Controls:MetroProgressBar x:Name="progressbar" Height="27" Margin="0,0,10,0"/>
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
@@ -70,14 +77,14 @@
                             </Button.IsEnabled>
                         </Button>
                         <Button x:Name="ExitButton" Style="{DynamicResource SquareButtonStyle}" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" IsCancel="True" >Exit</Button>
-                        <CheckBox FontWeight="Bold" Margin="170,5,0,0" Width="121" Height="19" IsChecked="True"> Overwrite Existing</CheckBox>
-                        <RadioButton Margin="10,5,10,0">Move</RadioButton>
-                        <RadioButton Margin="0,5,0,0" IsChecked="True">Copy</RadioButton>
-                        <Label FontWeight="Bold">: File Operation</Label>
+                        <CheckBox x:Name="OverwriteExistingCheckBox" FontWeight="Bold" Margin="120,0,0,0" Width="139" Height="18" IsChecked="True" FontFamily="Segoe UI">Overwrite Existing</CheckBox>
+                        <RadioButton x:Name="MoveRadioButton" Margin="10,0">Move</RadioButton>
+                        <RadioButton x:Name="CopyRadioButton" Margin="0" IsChecked="True">Copy</RadioButton>
+                        <Label FontWeight="Bold" Height="27" Content=" File Operation" FontFamily="Segoe UI Emoji" Width="100"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
         </Grid>
     </ScrollViewer>
-   
+
 </Controls:MetroWindow>
