--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -1,9 +1,17 @@
-﻿<Controls:MetroWindow  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+﻿<Controls:MetroWindow  xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" x:Name="metroWindow"
         x:Class="Rush.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Rush" Height="317.557" Width="645" MaxWidth="645"
+        Title="Rush" Height="317" Width="645" MaxWidth="645"
         xmlns:vc="clr-namespace:Rush.Converters" Icon="/Rush;component/Images/logo.PNG">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Content="about" />
+            <Button Content="home"></Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
+
     <Window.Resources>
         <vc:ListSelectedToBool x:Key="ListSelectedToBoolConverter"></vc:ListSelectedToBool>
         <vc:ComboBoxAndButtonTooltipMultiValueConverter x:Key="ComboBoxAndButtonTooltipMultiValueConverter"></vc:ComboBoxAndButtonTooltipMultiValueConverter>
@@ -11,6 +19,19 @@
         <vc:BoolToColorConverter x:Key="BoolToColorConverter"></vc:BoolToColorConverter>
         <vc:StringToBoolConverter x:Key="StringToBoolConverter"></vc:StringToBoolConverter>
         <vc:OrganizeButtonConverter x:Key="OrganizeButtonConverter"></vc:OrganizeButtonConverter>
+        <vc:ProgressToInfoConverter x:Key="ProgressToInfoConverter"></vc:ProgressToInfoConverter>
+        <Storyboard x:Key="WindowExpand">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Height)" Storyboard.TargetName="metroWindow">
+                <EasingDoubleKeyFrame KeyTime="0" Value="317"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="430"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="WindowCollapse">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Height)" Storyboard.TargetName="metroWindow">
+                <EasingDoubleKeyFrame KeyTime="0" Value="430"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="317"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
     </Window.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <Grid Margin="5,10,0,0">
@@ -20,7 +41,6 @@
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                         <Label>Source Locations</Label>
                         <ComboBox Name="SourceLocationsComboBox" ToolTip="Folders For Get media FIles From" Margin="5,0,0,0" Width="339" BorderBrush="{Binding Tag, Converter={StaticResource BoolToColorConverter}, RelativeSource={RelativeSource Self}}" BorderThickness="2,1,1,1" Tag="{Binding Items.Count, Converter={StaticResource IntToBoolConverter}, Mode=OneWay, RelativeSource={RelativeSource Self}}">
-                            <ComboBoxItem Content="Music" ToolTip="E:\Music"/>
                         </ComboBox>
                         <Button Name="AddSourceFolderButton" Style="{DynamicResource SquareButtonStyle}" Click="OnAddNewSourceFolderButtonClick" Margin="5,0,0,0" ToolTip="Add New Location">Add</Button>
                         <Button Content="Remove" Style="{DynamicResource SquareButtonStyle}" Margin="5,0,0,0"  IsEnabled="{Binding SelectedIndex, Converter={StaticResource ListSelectedToBoolConverter}, ElementName=SourceLocationsComboBox}" Click="OnRemoveSelectedSourceFolderButtonClick">
@@ -61,9 +81,26 @@
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Visibility="Collapsed" x:Name="progressStack" Margin="20,5,10,0">
-                    <Label Name="TitleLabel" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34"></Label>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Name="TitleLabel" FontSize="18.667" FontWeight="Bold" FontFamily="Segoe UI Symbol" Height="34" Width="330"></Label>
+                        <StackPanel Orientation="Horizontal">
+                            <Label x:Name="DuplicatesLabel" HorizontalContentAlignment="Right" Width="270" Cursor="Hand" Content="" MouseDown="OnDuplicatesLabelClick" Foreground="Tomato" Height="30" />
+                        </StackPanel>
+                    </StackPanel>
+                    
                     <Label Name="MessageLabel" Height="35"></Label>
-                    <Controls:MetroProgressBar x:Name="progressbar" Height="27" Margin="0,0,10,0"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Controls:MetroProgressBar x:Name="progressbar" Height="27" Margin="0,0,10,0" Width="500"/>
+                        <Label Name="CountLabel" Width="91" Foreground="#FF008287">
+                            <Label.Content>
+                                <MultiBinding Converter="{StaticResource ProgressToInfoConverter}">
+                                    <Binding ElementName="progressbar" Path="Maximum"></Binding>
+                                    <Binding ElementName="progressbar" Path="Value"></Binding>
+                                </MultiBinding>
+                            </Label.Content>
+                        </Label>
+                    </StackPanel>
+                    
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
@@ -79,8 +116,8 @@
                         <Button x:Name="ExitButton" Style="{DynamicResource SquareButtonStyle}" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" IsCancel="True" >Exit</Button>
                         <CheckBox x:Name="OverwriteExistingCheckBox" FontWeight="Bold" Margin="120,0,0,0" Width="139" Height="18" IsChecked="True" FontFamily="Segoe UI">Overwrite Existing</CheckBox>
                         <RadioButton x:Name="MoveRadioButton" Margin="10,0">Move</RadioButton>
-                        <RadioButton x:Name="CopyRadioButton" Margin="0" IsChecked="True">Copy</RadioButton>
-                        <Label FontWeight="Bold" Height="27" Content=" File Operation" FontFamily="Segoe UI Emoji" Width="100"/>
+                        <RadioButton x:Name="CopyRadioButton" Margin="0" IsChecked="True" Width="52">Copy</RadioButton>
+                        <Label HorizontalContentAlignment="Right" FontWeight="Bold" Height="23" Content=" File Operation" FontFamily="Metro" Width="103"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
