--- a/Rush/Windows/MainWindow.xaml
+++ b/Rush/Windows/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Rush" Height="317" Width="645" MaxWidth="645"
-        xmlns:vc="clr-namespace:Rush.Converters" Icon="/Rush;component/Images/logo.PNG">
+        xmlns:vc="clr-namespace:Rush.Converters" Icon="/Rush;component/Images/logo.PNG" Background="#FFDCF7F6">
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
             <Button Content="about" />
@@ -114,10 +114,7 @@
                             </Button.IsEnabled>
                         </Button>
                         <Button x:Name="ExitButton" Style="{DynamicResource SquareButtonStyle}" Margin="10,0,0,0" Width="57" Click="OnExitButtonClick" IsCancel="True" >Exit</Button>
-                        <CheckBox x:Name="OverwriteExistingCheckBox" FontWeight="Bold" Margin="120,0,0,0" Width="139" Height="18" IsChecked="True" FontFamily="Segoe UI">Overwrite Existing</CheckBox>
-                        <RadioButton x:Name="MoveRadioButton" Margin="10,0">Move</RadioButton>
-                        <RadioButton x:Name="CopyRadioButton" Margin="0" IsChecked="True" Width="52">Copy</RadioButton>
-                        <Label HorizontalContentAlignment="Right" FontWeight="Bold" Height="23" Content=" File Operation" FontFamily="Metro" Width="103"/>
+                        <CheckBox x:Name="OverwriteExistingCheckBox" FontWeight="Bold" Margin="350,0,0,0" Width="129" Height="18" IsChecked="True" FontFamily="Segoe UI">Overwrite Existing</CheckBox>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
